--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,3 +19,6 @@ const { pageTitle } = Astro.props;
         <Footer />
     </body>
 </html>
+
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"
+></script>
