--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,7 +8,7 @@ const { frontmatter } = Astro.props;
         <h1>{frontmatter.title}</h1>
         <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
         <p><em>{frontmatter.description}</em></p>
-        <img src=`../${frontmatter.thumbnail}` width="300" />
+        <img src=`${frontmatter.thumbnail}` width="300" />
         <slot />
         <a href="../">Go Back</a>
     </div>
