--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -2,13 +2,17 @@
 const allPosts = Object.values(
     import.meta.glob("../pages/posts/*.md", { eager: true })
 );
+const sortedPosts = allPosts.sort(
+    (a: any, b: any) =>
+        Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate)
+);
 ---
 
 <main>
     <h2>Posts</h2>
     <ul>
         {
-            allPosts.map((post: any) => (
+            sortedPosts.map((post: any) => (
                 <li>
                     <a href={post.url}>
                         {post.frontmatter.pubDate.slice(0, 10)} -{" "}
