--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -10,6 +10,6 @@ const { frontmatter } = Astro.props;
         <p><em>{frontmatter.description}</em></p>
         <img src=`${frontmatter.thumbnail}` width="300" />
         <slot />
-        <a href="../">Go Back</a>
+        <a href="/">Go Back</a>
     </div>
 </BaseLayout>
