--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,7 +8,9 @@ const { frontmatter } = Astro.props;
         <img src=`${frontmatter.thumbnail}` class="bigImage floatRight" />
         <h1>{frontmatter.title}</h1>
         <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
-        <p><em>{frontmatter.description}</em></p>
+        <p style="margin: 0 0 40px 10px; font-size: 30px">
+            <em>{frontmatter.description}</em>
+        </p>
         <slot />
         <a href="/" id="backButton">Go Back</a>
     </div>
